external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_leave_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 276
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_2024/verification/spec_only_leave_function.move:6:9
  │
6 │         bar()
  │         ^^^ Unbound function 'bar' in current scope
